Fix borders and spacing, make sure they're aligned

--- a/sign_up_form.css
+++ b/sign_up_form.css
@@ -1,6 +1,6 @@
 html{
   background-color: black;
-  height: 800px;
+  padding-bottom: 20px;
 }
 
 body{
@@ -8,16 +8,18 @@ body{
   justify-content: flex-end;
   width: 75%;
   height: 100%;
-  margin: auto;
+  margin: 0 auto 0 auto;
   background-color: white;
-  padding: 0px 0 15px 0;
+  padding: 0 0 15px 0;
 }
 
 form{
+  position: relative;
+  left: 16px;
   width: 60%;
   height: 100%;
   margin: 0 40px 0px 0px;
-  font: 1.1em Arial, sans-serif;
+  font: 0.9em Arial, sans-serif;
 }
 fieldset{
   width: 100%;
@@ -27,8 +29,7 @@ fieldset{
 .set1{
 display: flex;
 flex-direction: column;
-padding-top: 90px;
-padding-bottom: 20px;
+padding: 90px 0 20px 22px;
 font-size: 1.2em;
 font-weight: bolder;
 }
@@ -37,13 +38,15 @@ font-weight: bolder;
 display: inline;
 flex-direction: row;
 flex-wrap: wrap;
-margin-right: 170px;
+margin-right: 150px;
 }
 
 .set2{
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  font-size: 0.8em;
+  padding-right: 13px;
 }
 
 .heading{
